# passwort

./: .gitignore  README.md  pyproject.toml  setup.py
passwort/: __init__.py  __main__.py
passwort/tests/: BasicTests.py
