[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "passwort"
version = "1.1.3"
dependencies = [
  "pwgen>=0.4",
  "pycryptodomex>=3.6.1",
]
description = "A simple password manager"
authors = [
  {name = "Lukhnos Liu", email = "lukhnos@lukhnos.org"},
]
readme = "README.md"
license = "MIT"

[project.scripts]
passwort = "passwort:main"

[project.urls]
Homepage = "https://github.com/lukhnos/passwort"
